Add Mojo to perform a PDE-API-tools API analysis